<resources>
    <string name="app_name">NMedia</string>
    <string name="simple_description">Something missing here…</string>
    <string name="type_hint">Enter the text…</string>
    <string name="edit_button">Edit</string>
    <string name="remove_button">Remove</string>
    <string name="empty_content_warning">Content can\'t be empty</string>
    <string name="chooser_share_post">Share</string>
    <string name="ok_message" translatable="false">OK</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="new_notification">New notification!</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_not_updated"><b>Update the app so that notifications are displayed again!</b></string>
    <string name="notification_new_post"><big><b>%1$s published post:</b></big></string>
    <string name="error">Oops, something went wrong :( . Refresh or try again.</string>
    <string name="retry">Retry</string>
    <string name="empty_posts">Nothing to see here yet :(</string>
    <string name="clear">Clear</string>
    <string name="picker_error">Photo picker error</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_error">User name not found or incorrect password/login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="empty_fields">Fields should not be empty</string>
    <string name="chooser_play_video">Play</string>

</resources>
